--- a/readme.html
+++ b/readme.html
@@ -61,11 +61,14 @@ img {
 
 
 
-<div id="motor-trend-car-road-test-explorer" class="section level2">
-<h2>Motor Trend Car Road Test Explorer</h2>
-<div id="on-the-main-tab-called-explore-the-data-application-visualises-the-mtcars-dataset.-the-graph-on-the-visualization-page-shows-scatterplot-for-fuel-consumption-for-different-cars-in-the-dataset.-data-window-shows-the-tabular-data.-you-can-filter-the-data-by-two-parameters---number-of-cilinders-and-gross-horsepower-using-slider-inputs-on-the-left-side." class="section level3">
-<h3>On the main tab, called Explore the Data, application visualises the mtcars dataset. The graph on the Visualization page shows scatterplot for fuel consumption for different cars in the dataset. Data window shows the tabular data. You can filter the data by two parameters - number of cilinders and gross horsepower using slider inputs on the left side.</h3>
-<p>The application can be found here: <a href="https://schigrinov.shinyapps.io/DevelopDataProductCoursework/" class="uri">https://schigrinov.shinyapps.io/DevelopDataProductCoursework/</a></p>
+<div id="motor-trend-car-road-tests" class="section level2">
+<h2>Motor Trend Car Road Tests</h2>
+<div id="the-data-is-part-of-the-r-datasets" class="section level3">
+<h3>The data is part of the R datasets</h3>
+</div>
+<div id="the-data-was-extracted-from-the-1974-motor-trend-us-magazine-and-comprises-fuel-consumption-and-10-aspects-of-automobile-design-and-performance-for-32-automobiles-1973-74-models." class="section level3">
+<h3>The data was extracted from the 1974 Motor Trend US magazine, and comprises fuel consumption and 10 aspects of automobile design and performance for 32 automobiles (1973-74 models).</h3>
+<p>The app can be found here: <a href="https://schigrinov.shinyapps.io/DevelopDataProductCoursework/" class="uri">https://schigrinov.shinyapps.io/DevelopDataProductCoursework/</a></p>
 </div>
 <div id="author---sergey-chigrinov" class="section level3">
 <h3>Author - Sergey Chigrinov</h3>
